--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "test"
   },
   "dependencies": {
+    "bignumber.js": "^4.1.0",
     "dotenv": "^4.0.0",
+    "js-sha256": "^0.6.0",
     "truffle": "^3.4.9",
     "truffle-hdwallet-provider": "0.0.3"
   },
